--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -40,6 +40,10 @@ footer.sticky-footer {
   z-index: 1100;
 }
 
+.card-table {
+  margin-bottom: 5rem !important;
+}
+
 .content-header {
   padding-left: 0;
   padding-right: 0;
