restructuring utilities javascrip

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,8 @@
 @import '~bootstrap/scss/bootstrap';
 @import "~admin-lte/plugins/font-awesome/css/font-awesome.min.css";
 @import "~admin-lte/build/scss/AdminLTE-raw.scss";
+@import '~vue-awesome-notifications/dist/styles/style.css';
+
 
 .user-panel i {
   font-size: 22px;
