--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -46,6 +46,10 @@ footer.sticky-footer {
   margin-bottom: 5rem !important;
 }
 
+.card-table [name='Datatable'] .row {
+  padding: 0rem 1rem 1rem 1rem;
+}
+
 .content-header {
   padding-left: 0;
   padding-right: 0;
