added filters button and functionality in reports view

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -182,3 +182,7 @@ footer.sticky-footer {
 .select2-container .select2-selection--single .select2-selection__rendered {
   padding-right: 10px !important;
 }
+
+.dropdown-filters .select2-container {
+  width: 100% !important;
+}
