--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -5,3 +5,8 @@ $body-bg: #f5f8fa;
 // Typography
 $font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-helvetica: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+// Login page
+$login-primary-color: #169a7c;
+$login-secondary-color: #2cb6bc; //2cb6bc
+$login-text: #34495e;
