--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -107,6 +107,16 @@ footer.sticky-footer {
   }
 }
 
+.item-action-buttons {
+  a {
+    padding-right: 10px;
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+}
+
 /*
  * Authorization pages
  */
