--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -117,10 +117,8 @@ footer.sticky-footer {
   }
 }
 
-/*
- * Authorization pages
- */
-.auth-page {
+
+.background-blank {
   background: $login-primary-color;
   background: -webkit-linear-gradient(to bottom, $login-secondary-color, $login-primary-color);
   background: linear-gradient(to bottom, $login-secondary-color, $login-primary-color);
@@ -130,8 +128,17 @@ footer.sticky-footer {
   width: 100%;
   height: 100%;
   padding: 50px 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
 }
 
+/*
+ * Authorization pages
+ */
 .login-block {
   margin-top: 5%;
 
