--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -100,6 +100,20 @@ body {
 }
 
 
+.tick {
+  animation: tick 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes tick {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .background-blank {
   background: $login-primary-color;
   background: -webkit-linear-gradient(to bottom, $login-secondary-color, $login-primary-color);
